Bug 1510574 - Remove shared memory segments from generated minidumps to cut down on the number of modules r=ted

Differential Revision: https://phabricator.services.mozilla.com/D16188